--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer">
+<footer class="page-footer grey darken-1">
     <div class="container">
       <div class="row">
         <div class="col l4 s16">
