--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,13 @@
 <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper amber lighten-1">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a routerLink="/admin/get">Users</a></li>
+        <li><a routerLink="/entrust/get">Entrust</a></li>
+        <li><a routerLink="/clients/get">Clients</a></li>
+        <li><a routerLink="/security/login"></a>Log In</a></li>
+        <li *ngIf="!activeSession"><a routerLink="/seguridad/login">Login</a></li>
+        <li *ngIf="activeSession"><a routerLink="/seguridad/logout">Cerrar Sesion</a></li>
       </ul>
     </div>
   </nav>
