--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,10 +4,10 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a routerLink="/admin/get">Users</a></li>
         <li><a routerLink="/entrust/get">Entrust</a></li>
-        <li><a routerLink="/clients/get">Clients</a></li>
-        <li><a routerLink="/security/login"></a>Log In</a></li>
-        <li *ngIf="!activeSession"><a routerLink="/seguridad/login">Login</a></li>
-        <li *ngIf="activeSession"><a routerLink="/seguridad/logout">Cerrar Sesion</a></li>
+        <li><a routerLink="/client/get">Clients</a></li>
+        <li><a routerLink="/service/get">Services</a></li>
+        <li *ngIf="!activeSession"><a routerLink="/security/login">Log In</a></li>
+        <li *ngIf="activeSession"><a routerLink="/security/logout">Log Out</a></li>
       </ul>
     </div>
   </nav>
