--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,1 +1,13 @@
-<p>index works!</p>
+<body>
+    
+    <!--Portada CSS -->
+    <div class="cotainer py-5">
+  
+        <h2>
+          <span>AM</span><span>A</span><span>ZON</span>
+          <br>
+          <i></i>
+        </h2>
+      </div>
+    
+</body>
