--- a/src/app/modules/service/get/get.component.html
+++ b/src/app/modules/service/get/get.component.html
@@ -1,1 +1,33 @@
-<p>get works!</p>
+<div class="container">
+    <br>
+    <a routerLink="/service/create" class="btn">Registrar Encomienda</a>
+   
+    <table class="table responsive">
+      <thead>
+        <tr>
+            <th>Fecha</th>
+            <th>Hora</th>
+            <th>Valor</th>
+            <th>Origen</th>
+            <th>Destino</th>
+            <th>Encomienda</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.date}}</td>
+          <td>{{p.time}}</td>
+          <td>{{p.value}}</td>
+          <td>{{p.origin}}</td>
+          <td>{{p.destiny}}</td>
+          <td>{{p.entrust}}</td>
+          <td>
+            <a routerLink="/service/edit/{{p.id}}" class="btn">Editar</a>
+            <button class="btn red" (click)="delete(p.id)">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  
