--- a/src/app/modules/admin/Users/get/get.component.html
+++ b/src/app/modules/admin/Users/get/get.component.html
@@ -1,1 +1,30 @@
-<p>get works!</p>
+<div class="container">
+    <br>
+    <a routerLink="/admin/create" class="btn">Registrar Persona</a>
+   
+    <table class="table responsive">
+      <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Apellidos</th>
+            <th>Correo</th>
+            <th>Telefono</th>
+            <th>Acciones</th>
+        </tr>
+      </thead>
+   
+      <tbody>
+        <tr *ngFor="let p of listado">
+          <td>{{p.names}}</td>
+          <td>{{p.lastNames}}</td>
+          <td>{{p.email}}</td>
+          <td>{{p.phone}}</td>
+          <td>
+            <a routerLink="/admin/edit/{{p.id}}" class="btn">Editar</a>
+            <button class="btn red" (click)="delete(p.id)">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+  
