--- a/src/app/modules/entrust/create/create.component.html
+++ b/src/app/modules/entrust/create/create.component.html
@@ -1,1 +1,59 @@
-<p>create works!</p>
+<div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="card grey lighten-3">
+        <div class="card-content">
+          <h4 class="card-title center-align" style="font-size:40px">Registro Encomienda</h4>
+          <form [formGroup]="fgValidacion" (ngSubmit)="registrarEncomienda()" class="col s12" style="margin-top: 50px;">
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="description" id="description" type="text" class="validate">
+                <label for="description">Descripcion</label>
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="size" id="size" type="number" class="validate">
+                <label for="size">Tamaño</label>
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="type" id="type" type="text" class="validate">
+                <label for="type">Tipo</label>
+              </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                  <input formControlName="presentation" id="presentation" type="text" class="validate">        
+                  <!-- <select>
+                      <option value="" disabled selected>Choose your option</option>
+                      <option value="1">Option 1</option>
+                      <option value="2">Option 2</option>
+                      <option value="3">Option 3</option>
+                    </select>
+                    <label>Materialize Select</label> -->
+                      
+                  <label for="presentation">Presentación</label>
+                </div>
+              </div>
+  
+            <!-- boton de submit -->
+            <div class="row center-align">
+              <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
+                name="action">Registrar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+  
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  
