--- a/src/app/modules/entrust/edit/edit.component.html
+++ b/src/app/modules/entrust/edit/edit.component.html
@@ -1,1 +1,59 @@
-<p>edit works!</p>
+<div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="card grey lighten-3">
+        <div class="card-content">
+          <h4 class="card-title center-align" style="font-size:40px">Editar Encomienda</h4>
+          <form [formGroup]="fgValidacion" (ngSubmit)="edit()" class="col s12" style="margin-top: 50px;">
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="description" id="description" type="text" class="validate">
+                <label for="description">Descripcion</label>
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="size" id="size" type="number" class="validate">
+                <label for="size">Tamaño</label>
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="type" id="type" type="text" class="validate">
+                <label for="type">Tipo</label>
+              </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                <label for="presentation">Presentación</label>
+                <input formControlName="presentation" id="presentation" type="text" class="validate">        
+                  <!-- <label formControlName="presentation" id="presentation" type="text" class="validate">Seleccione su Presentación</label >
+                  <select class="browser-default">
+                    <option value="" disabled selected></option>
+                    <option value="caja">Caja</option>
+                    <option value="bolsa">Bolsa</option>
+                    <option value="sobre">Sobre</option>
+                  </select> -->
+                      
+                </div>
+              </div>
+  
+            <!-- boton de submit -->
+            <div class="row center-align">
+              <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
+                name="action">Enviar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+  
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  
