--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -8,7 +8,7 @@
                 If you think something is broken, report a problem.
             </p>
             <div class="btns">
-                <a href="#"> return home</a>
+                <a routerLink="/index"> return home</a>
                 <a href="#"> report problem</a>
                 
             </div>
