--- a/src/app/modules/entrust/create/create.component.html
+++ b/src/app/modules/entrust/create/create.component.html
@@ -1,6 +1,8 @@
-<div class="row">
+<body>
+
+  <div class="row">
     <div class="col s12 l4 offset-l4">
-      <div class="card grey lighten-3">
+      <div class="">
         <div class="card-content">
           <h4 class="card-title center-align" style="font-size:40px">Registro Encomienda</h4>
           <form [formGroup]="fgValidacion" (ngSubmit)="registrarEncomienda()" class="col s12" style="margin-top: 50px;">
@@ -29,27 +31,27 @@
               </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
-                  <!-- <input formControlName="presentation" id="presentation" type="text" class="validate">         -->
-                  <label formControlName="presentation" id="presentation" type="text" class="validate">Seleccione su Presentación</label >
-                  <select class="browser-default">
-                    <option value="" disabled selected></option>
-                    <option value="caja">Caja</option>
-                    <option value="bolsa">Bolsa</option>
-                    <option value="sobre">Sobre</option>
+              <div class="input-field col s12">
+                <!-- <input formControlName="presentation" id="presentation" type="text" class="validate">         -->
+                <label formControlName="presentation" id="presentation" type="text" class="validate"></label>
+                <select class="browser-default">
+                  <option value="" disabled selected>Seleccione su presentación</option>
+                  <option value="caja">Caja</option>
+                  <option value="bolsa">Bolsa</option>
+                  <option value="sobre">Sobre</option>
+                </select>
+                <!-- <select>
+                    <option value="" disabled selected>Choose your option</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
                   </select>
-                  <!-- <select>
-                      <option value="" disabled selected>Choose your option</option>
-                      <option value="1">Option 1</option>
-                      <option value="2">Option 2</option>
-                      <option value="3">Option 3</option>
-                    </select>
-                    <label>Materialize Select</label> -->
-                      
-                  <!-- <label for="presentation">Presentación</label> -->
-                </div>
+                  <label>Materialize Select</label> -->
+
+                <!-- <label for="presentation">Presentación</label> -->
               </div>
-  
+            </div>
+
             <!-- boton de submit -->
             <div class="row center-align">
               <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
@@ -57,10 +59,11 @@
                 <i class="material-icons right">send</i>
               </button>
             </div>
-  
+
           </form>
         </div>
       </div>
     </div>
   </div>
-  
+
+</body>
