--- a/src/app/modules/security/register/register.component.html
+++ b/src/app/modules/security/register/register.component.html
@@ -1,45 +1,48 @@
-<div class="row">
-  <div class="col s12 l4 offset-l4">
-    <div class="card grey lighten-3">
-      <div class="card-content">
-        <h4 class="card-title center-align" style="font-size:50px">Registro</h4>
-        <form [formGroup]="fgValidacion" (ngSubmit)="registrarUsusario()" class="col s12" style="margin-top: 50px;">
-          <div class="row">
-            <div class="input-field col s6">
-              <input formControlName="names" id="names" type="text" class="validate">
-              <label for="names">Nombre</label>
-            </div>
-            <div class="input-field col s6">
-              <input formControlName="lastNames" id="lastNames" type="text" class="validate">
-              <label for="lastNames">Apellidos</label>
-            </div>
-          </div>
+<body>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input formControlName="email" id="email" type="email" class="validate">
-              <label for="email">Email</label>
-              <div class="mensajeValidacion" >
-                <strong>Este campo es requerido.</strong>
+  <div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="N/A transparent">
+        <div class="card-content ">
+          <h4 class="card-title center-align ">Registro</h4>
+          <form [formGroup]="fgValidacion" (ngSubmit)="registrarUsusario()" class="col s12" style="margin-top: 50px;">
+            <div class="row">
+              <div class="input-field col s6">
+                <input formControlName="names" id="names" type="text" class="validate">
+                <label for="names">Nombre</label>
+              </div>
+              <div class="input-field col s6">
+                <input formControlName="lastNames" id="lastNames" type="text" class="validate">
+                <label for="lastNames">Apellidos</label>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <input formControlName="phone" id="phone" type="text" class="validate">
-              <label for="phone">Telefono</label>
-            </div>
-          </div>
-                <!-- boton de submit -->
-          <div class="row center-align">
-            <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
-              name="action">Registrar
-              <i class="material-icons right">send</i>
-            </button>
-          </div>
 
-        </form>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="email" id="email" type="email" class="validate">
+                <label for="email">Email</label>
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="phone" id="phone" type="text" class="validate">
+                <label for="phone">Telefono</label>
+              </div>
+            </div>
+            <!-- boton de submit -->
+            <div class="row center-align">
+              <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
+                name="action">Registrar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</body>
