--- a/src/app/modules/service/create/create.component.html
+++ b/src/app/modules/service/create/create.component.html
@@ -1,92 +1,96 @@
-<div class="row">
-  <div class="col s12 l4 offset-l4">
-    <div class="card grey lighten-3">
-      <div class="card-content">
-        <h4 class="card-title center-align" style="font-size:40px">Registar Servicio</h4>
-        <form [formGroup]="fgValidacion" (ngSubmit)="registrarServicio()" class="col s12" style="margin-top: 50px;">
-          <div class="row">
-            <div class="input-field col s6">
-              <input formControlName="date" id="date" type="text" class="validate">
-              <label for="date">Fecha</label>
-              <div class="active">
-                <strong>Este campo es requerido.</strong>
-              </div>
-            </div>
-            <div class="input-field col s6">
-              <input formControlName="time" id="time" type="text" class="validate">
-              <label for="time">Hora</label>
-              <div class="mensajeValidacion">
-                <strong>Este campo es requerido.</strong>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <input formControlName="value" id="value" type="text" class="validate">
-              <label for="value">Valor</label>
-              <div class="mensajeValidacion">
-                <strong>Este campo es requerido.</strong>
-              </div>
-            </div>
-          </div>
+<body>
 
-          <div class="row">
-            <div class="input-field col s6">
-              <label>Origen</label>
-              <select formControlName="origin" id="origin" type="text" class="validate browser-default">
-                <option value="" disabled selected></option>
-                <option *ngFor="let client of listadoClientes" value="{{client.name+  '' + client.lastNames}}">
-                  {{client.name + " " + client.lastNames}}</option>
-              </select>
-
-              <!-- <input formControlName="origin" id="origin" type="text" class="validate">
-              <label for="origin">Origen</label> -->
-              <div class="mensajeValidacion">
-                <strong>Este campo es requerido.</strong>
-              </div>
-            </div>
+  <div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="">
+        <div class="card-content">
+          <h4 class="card-title center-align" style="font-size:40px">Registar Servicio</h4>
+          <form [formGroup]="fgValidacion" (ngSubmit)="registrarServicio()" class="col s12" style="margin-top: 50px;">
             <div class="row">
               <div class="input-field col s6">
-                <label>Destino</label>
-                <select formControlName="destiny" id="destiny" type="text" class="validate browser-default">
-                  <option value="" disabled selected></option>
-                  <option *ngFor="let client of listadoClientes" value="{{client.name+  '' + client.lastNames}}">
-                    {{client.name + " " + client.lastNames}}</option>
-                </select>
-                <!-- <input formControlName="destiny" id="destiny" type="text" class="validate">
-                <label for="destiny">Destino</label> -->
+                <input formControlName="date" id="date" type="date" class="validate">
+                <label for="date">Fecha</label>
+                <div class="active">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+              <div class="input-field col s6">
+                <input formControlName="time" id="time" type="time" class="validate">
+                <label for="time">Hora</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="row">
-            <div class="input-field col s12">
-              <label>Encomienda</label>
-              <select formControlName="entrust" id="entrust" type="text" class="validate browser-default">
-                <option value="" disabled selected></option>
-                <option *ngFor="let entrust of listadoEncomiendas" value="{{entrust.description}}">
-                  {{entrust.description}}</option>
-              </select>
-              <!-- <input formControlName="entrust" id="entrust" type="text" class="validate">
-              <label for="entrust">Encomienda</label> -->
-              <div class="mensajeValidacion">
-                <strong>Este campo es requerido.</strong>
+            <div class="row">
+              <div class="input-field col s12">
+                <input formControlName="value" id="value" type="number" class="validate">
+                <label for="value">Valor</label>
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- boton de submit -->
-          <div class="row center-align">
-            <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
-              name="action">Registrar
-              <i class="material-icons right">send</i>
-            </button>
-          </div>
 
-        </form>
+            <div class="row">
+              <div class="input-field col s6">
+                <label></label>
+                <select formControlName="origin" id="origin" type="text" class="validate browser-default">
+                  <option value="" disabled selected>Origen</option>
+                  <option *ngFor="let client of listadoClientes" value="{{client.name+  '' + client.lastNames}}">
+                    {{client.name + " " + client.lastNames}}</option>
+                </select>
+
+                <!-- <input formControlName="origin" id="origin" type="text" class="validate">
+                    <label for="origin">Origen</label> -->
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s6">
+                  <label></label>
+                  <select formControlName="destiny" id="destiny" type="text" class="validate browser-default">
+                    <option value="" disabled selected>Destino</option>
+                    <option *ngFor="let client of listadoClientes" value="{{client.name+  '' + client.lastNames}}">
+                      {{client.name + " " + client.lastNames}}</option>
+                  </select>
+                  <!-- <input formControlName="destiny" id="destiny" type="text" class="validate">
+                          <label for="destiny">Destino</label> -->
+                  <div class="mensajeValidacion">
+                    <strong>Este campo es requerido.</strong>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="input-field col s12">
+                <label></label>
+                <select formControlName="entrust" id="entrust" type="text" class="validate browser-default">
+                  <option value="" disabled selected>Encomienda</option>
+                  <option *ngFor="let entrust of listadoEncomiendas" value="{{entrust.description}}">
+                    {{entrust.description}}</option>
+                </select>
+                <!-- <input formControlName="entrust" id="entrust" type="text" class="validate">
+                            <label for="entrust">Encomienda</label> -->
+                <div class="mensajeValidacion">
+                  <strong>Este campo es requerido.</strong>
+                </div>
+              </div>
+            </div>
+            <!-- boton de submit -->
+            <div class="row center-align">
+              <button [disabled]="!fgValidacion.valid" class="btn waves-effect waves-light" type="submit"
+                name="action">Registrar
+                <i class="material-icons right">send</i>
+              </button>
+            </div>
+
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+</body>
