--- a/src/app/modules/service/get/get.component.html
+++ b/src/app/modules/service/get/get.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <br>
     <a routerLink="/service/create" class="btn">Registrar Encomienda</a>
    
@@ -30,4 +30,50 @@
       </tbody>
     </table>
     </div>
-  
+   -->
+
+<body>
+  <div class="container">
+    <br>
+    <div class="fixed-action-btn toolbar">
+      <a routerLink="/service/create" class="btn-floating btn-large waves-effect grey darken-3"><i
+          class="material-icons">add</i></a>
+    </div>
+    <table class="table responsive">
+      <tbody>
+        <tr *ngFor="let p of listado;let i=index;" >
+          <td>
+            <div class="row mt-2">
+              <div class="col s3 m5">
+                <div class="card yellow lighten-3">
+                  <div class="card-image">
+                    <img class="responsive-img" src="../../../../assets/service.png" style="height: 40%;
+                      width: 60%;
+                      margin-left:25%;
+                      top: 30px;
+                      bottom: 50px;">
+                    <span class="card-title" style="top: 60px;">Servicio {{i+1}}</span>
+                    <a routerLink="/service/edit/{{p.id}}"
+                      class="btn-floating halfway-fab waves-effect green accent-3"><i
+                        class="material-icons">edit</i></a>
+                    <button class="btn-floating halfway-fab waves-effect red" (click)="delete(p.id)"><i
+                        class="material-icons">delete_forever</i></button>
+                  </div>
+                  <div class="card-content">
+                    <p>Date is: {{p.date}}<br>
+                       Time is: {{p.time}}<br>
+                       Value is: {{p.value}} <br>
+                       Origin is: {{p.origin}} <br>
+                       Destiny is: {{p.destiny}} <br>
+                       Entrust is: {{p.entrust}} </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+</body>
