--- a/src/app/modules/client/edit/edit.component.html
+++ b/src/app/modules/client/edit/edit.component.html
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="input-field col s12">
                 <input formControlName="identification" id="identification" type="text" class="validate">
-                <label for="identification">Identificacion</label>
+                <label  for="identification" class="active">Identificacion</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
@@ -17,14 +17,14 @@
             <div class="row">
               <div class="input-field col s6">
                 <input formControlName="name" id="name" type="text" class="validate">
-                <label for="name">Nombre</label>
+                <label  for="name" class="active">Nombre</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
               </div>
               <div class="input-field col s6">
                 <input formControlName="lastNames" id="lastNames" type="text" class="validate">
-                <label for="lastNames">Apellidos</label>
+                <label for="lastNames" class="active">Apellidos</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
@@ -34,7 +34,7 @@
             <div class="row">
               <div class="input-field col s12">
                 <input formControlName="email" id="email" type="email" class="validate">
-                <label for="email">Email</label>
+                <label for="email" class="active">Email</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
@@ -43,32 +43,32 @@
             <div class="row">
               <div class="input-field col s12">
                 <input formControlName="phone" id="phone" type="text" class="validate">
-                <label for="phone">Telefono</label>
+                <label for="phone" class="active">Telefono</label>
               </div>
             </div>
   
             <div class="row">
               <div class="input-field col s6">
                 <input formControlName="country" id="country" type="text" class="validate">
-                <label for="country">Pais</label>
+                <label for="country" class="active">Pais</label>
               </div>
               <div class="input-field col s6">
                 <input formControlName="city" id="city" type="text" class="validate">
-                <label for="city">Ciudad</label>
+                <label for="city" class="active">Ciudad</label>
               </div>
             </div>
   
             <div class="row">
               <div class="input-field col s6">
                 <input formControlName="departament" id="departament" type="text" class="validate">
-                <label for="departament">Departemento</label>
+                <label for="departament" class="active">Departemento</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
               </div>
               <div class="input-field col s6">
                 <input formControlName="address" id="address" type="text" class="validate">
-                <label for="address">Dirección</label>
+                <label for="address" class="active">Dirección</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
