--- a/src/app/modules/entrust/edit/edit.component.html
+++ b/src/app/modules/entrust/edit/edit.component.html
@@ -7,7 +7,7 @@
             <div class="row">
               <div class="input-field col s12">
                 <input formControlName="description" id="description" type="text" class="validate">
-                <label for="description">Descripcion</label>
+                <label for="description" class="active">Descripcion</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
@@ -16,7 +16,7 @@
             <div class="row">
               <div class="input-field col s12">
                 <input formControlName="size" id="size" type="number" class="validate">
-                <label for="size">Tamaño</label>
+                <label for="size" class="active">Tamaño</label>
                 <div class="mensajeValidacion">
                   <strong>Este campo es requerido.</strong>
                 </div>
@@ -25,12 +25,12 @@
             <div class="row">
               <div class="input-field col s12">
                 <input formControlName="type" id="type" type="text" class="validate">
-                <label for="type">Tipo</label>
+                <label for="type" class="active">Tipo</label>
               </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                <label for="presentation">Presentación</label>
+                <label for="presentation" class="active">Presentación</label>
                 <input formControlName="presentation" id="presentation" type="text" class="validate">        
                   <!-- <label formControlName="presentation" id="presentation" type="text" class="validate">Seleccione su Presentación</label >
                   <select class="browser-default">
